feature(#1227) Replace `KeysetPointIterator` with `RawLocationPointStream` for visit processing
- Refactor visit streaming logic to use `RawLocationPointStream` for improved memory efficiency and reusability.
- Migrate methods in `RawLocationPointJdbcService`, `PreviewRawLocationPointJdbcService`, and `UnifiedLocationProcessingService`.
- Add `PointStreamSupport` for shared SQL and keyset cursor logic.
- Remove redundant `KeysetPointIterator` implementation.
- Update polygon and zone services, and simplify utility logic for point handling.
- Expand tests for polygon editing, visit processing, and no-visit zone updates.
- Refine templates and integration tests for consistent user experience.